--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
     line-height: 50px;
     background-color: burlywood;
     text-align: center;
-    color: white;
+    color: black;
 }
 body{
     width: 100%;
